--- a/src/styles/components/_LabelTableHeader.scss
+++ b/src/styles/components/_LabelTableHeader.scss
@@ -97,7 +97,7 @@ div.sstc-data-container table.sstc-data-table tbody:nth-child(1) tr td:nth-child
   max-width: 250px;
   display: flex;
   flex-direction: row;
-  border-left: thin solid grey;
+  //border-left: thin solid grey;
 }
 
 tbody .mltc-name-td-v2 label {
@@ -125,10 +125,10 @@ tbody .mltc-name-td-v2 label {
 .mltc-label-th-v2,
 .mltc-label-td-v2
 {
-  min-width: 80px;
-  max-width: 80px;
-  border-left: thin solid grey;
-  border-right: thin solid grey;
+  //min-width: 80px;
+  //max-width: 80px;
+  //border-left: thin solid grey;
+  //border-right: thin solid grey;
   font-size: vars.$fontScale;
 }
 
@@ -146,23 +146,18 @@ tbody .mltc-name-td-v2 label {
   max-width: 180px;
 }
 
-.mltc-label-td-v2 button:nth-child(1)
-{
-  margin-left: 15px;
-}
-
-.mltc-label-td-v2 button:nth-child(2)
-{
-  margin-left: 5px;
-}
-
 .PredictionColumn-----------------------------------------------------------------------------------------------------{}
-.mltc-prediction-th-v2, .mltc-prediction-td-v2
+.mltc-prediction-th-v2
 {
-  min-width: 80px;
-  max-width: 80px;
-  border-left: thin solid grey;
-  border-right: thin solid grey;
+  //border-left: thin solid grey;
+  border-right: none;
+  font-size: vars.$fontScale;
+}
+
+.mltc-prediction-td-v2
+{
+  //border-left: thin solid grey;
+  //border-right: thin solid grey;
   font-size: vars.$fontScale;
 }
 
