--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -99,6 +99,34 @@
   padding-right: 1.5em;
 }
 
+.mltc-name-th-v2 {
+  border-right: none;
+}
+
+.mltc-label-th-v2 span:nth-child(1) {
+  padding: 0.25em;
+}
+
+tr th.mltc-label-th-v2 {
+  width: 52%;
+  border-right: none;
+}
+
+tr th.mltc-prediction-th-v2 {
+  width: 50%;
+  border: none;
+}
+
+tbody td.mltc-label-td-v2 {
+  width: 50%;
+  border: none;
+}
+
+tbody td.mltc-prediction-td-v2 {
+  width: 50%;
+  border: none;
+}
+
 /*!
  * Copyright (c) 2021 Bentley Systems, Incorporated. All rights reserved.
  */
@@ -187,7 +215,6 @@ div.sstc-data-container table.sstc-data-table tbody:nth-child(1) tr td:nth-child
   max-width: 250px;
   display: flex;
   flex-direction: row;
-  border-left: thin solid grey;
 }
 
 tbody .mltc-name-td-v2 label {
@@ -210,10 +237,6 @@ tbody .mltc-name-td-v2 label {
 
 .mltc-label-th-v2,
 .mltc-label-td-v2 {
-  min-width: 80px;
-  max-width: 80px;
-  border-left: thin solid grey;
-  border-right: thin solid grey;
   font-size: 1.15em;
 }
 
@@ -230,19 +253,12 @@ tbody .mltc-name-td-v2 label {
   max-width: 180px;
 }
 
-.mltc-label-td-v2 button:nth-child(1) {
-  margin-left: 15px;
+.mltc-prediction-th-v2 {
+  border-right: none;
+  font-size: 1.15em;
 }
 
-.mltc-label-td-v2 button:nth-child(2) {
-  margin-left: 5px;
-}
-
-.mltc-prediction-th-v2, .mltc-prediction-td-v2 {
-  min-width: 80px;
-  max-width: 80px;
-  border-left: thin solid grey;
-  border-right: thin solid grey;
+.mltc-prediction-td-v2 {
   font-size: 1.15em;
 }
 
@@ -412,9 +428,12 @@ tbody .mltc-name-td-v2 label {
   border-collapse: collapse;
   margin: 0.3em;
   font-size: 0.9em;
-  width: 90%;
   height: 80%;
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
+}
+
+.sstc-data-container .sstc-data-table {
+  width: 95%;
 }
 
 tbody .mltc-label-td-v2 {
@@ -451,8 +470,10 @@ div table thead {
   border: none;
 }
 
+th.mltc-prediction-th-v2,
 td.mltc-prediction-td-v2 {
-  border-right: thin solid;
+  border-left: none;
+  border-right: none;
 }
 
 .nz-border-top thead {
